--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <!-- 地图 -->
-    <script type="text/javascript"
-            src="http://api.tianditu.gov.cn/api?v=4.0&tk=4c3a4b8cec3d4af47a12cdd192ce35cb"></script>
-    <script type="text/javascript"
-            src="http://lbs.tianditu.gov.cn/api/js4.0/opensource/openlibrary/ImageOverlay.js"></script>
-    <!--        <script type="text/javascript" src="./tiandiMap/index.js"></script>-->
+<!--    <script type="text/javascript"-->
+<!--            src="http://api.tianditu.gov.cn/api?v=4.0&tk=4c3a4b8cec3d4af47a12cdd192ce35cb"></script>-->
+<!--    <script type="text/javascript"-->
+<!--            src="http://lbs.tianditu.gov.cn/api/js4.0/opensource/openlibrary/ImageOverlay.js"></script>-->
+            <script type="text/javascript" src="./tiandiMap/index.js"></script>
   </head>
   <body>
     <noscript>
